syntax = "proto3";
package translator;
option go_package = "github.com/jdfalk/subtitle-manager/pkg/translatorpb";

import "google/protobuf/empty.proto";

service Translator {
  rpc Translate(TranslateRequest) returns (TranslateResponse);
  rpc GetConfig(google.protobuf.Empty) returns (ConfigResponse);
  rpc SetConfig(ConfigRequest) returns (google.protobuf.Empty);
}

message TranslateRequest {
  string text = 1;
  string language = 2;
}

message TranslateResponse {
  string translated_text = 1;
}

message ConfigResponse {
  map<string, string> settings = 1;
}

message ConfigRequest {
  map<string, string> settings = 1;
}
